tests/invalid/type_inf_loop.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module type_inf_loop.
:- interface.
:- implementation.

loop(loop).

:- end_module type_inf_loop.
